# Contacts_Display_QML

./: CMakeLists.txt  ContactItem.qml  Main.qml  README.md  contactitems.cpp  contactitems.h  contactmodel.cpp  contactmodel.h  contactsthread.cpp  contactsthread.h  main.cpp  qml.qrc
android/: AndroidManifest.xml  build.gradle  gradle.properties  local.properties
android/src/com/example/contactsdisplay/: MainActivity.java
